# Gomoku-ia

./: README.md
gomoku/: .gitignore  AiMove.cs  CMakeLists.txt  Cell.cs  GameState.cs  HeuristicAnalysis.cs  IHeuristicAnalysis.cs  Move.cs  Pattern.cs  Program.cs  gomoku.csproj  gomoku.sln
gomoku/src/: Ai.cs  Example.cs  HeuristicAnalysis.cs  Map.cs  Pattern.cs  PisqPipe.cs  Play.cs  Player.cs  Program.cs  Tile.cs
